# diggdrasil

./: .gitignore  Cargo.toml  perf.data.old
src/: constants.rs  data.rs  ecs.rs  main.rs  prelude.rs  util.rs
src/data/: ai.rs  assets.rs  crafting.rs  creatures.rs  effects.rs  equipment.rs  geometry.rs  item.rs  rendering.rs  ui.rs  util.rs  world.rs
src/data/ai/: a_star.rs  ai_action.rs  ai_goal.rs  ai_goal_result.rs  ai_goal_status.rs  ai_goal_trait.rs  diet.rs  disposition.rs  goals.rs  shadowcast.rs
src/data/assets/: sprite.rs  sprite_builder.rs  symbol.rs  symbol_builder.rs
src/data/crafting/: material.rs  material_shape.rs  recipe.rs  recipe_ingredient.rs  recipe_requirement.rs
src/data/creatures/: creature_builder.rs  race.rs  species.rs
src/data/effects/: particle_type.rs
src/data/equipment/: attack.rs  attack_type.rs
src/data/geometry/: direction.rs  directions.rs  itrig.rs  mirror.rs  position.rs  rotation.rs  rotation_direction.rs
src/data/item/: nutrient_type.rs
src/data/rendering/: char.rs  color.rs  texture.rs
src/data/ui/: directions_widget.rs  popup.rs  popup_list_item.rs  popup_state.rs  popup_type.rs  ui.rs
src/data/util/: dice_roll.rs
src/data/world/: chunk.rs  chunk_tile.rs  saved_chunk.rs  tile.rs  tile_layout.rs  tile_type.rs  tile_variant.rs  wall_feature.rs  weather_status.rs
src/ecs/: components.rs  resources.rs  system_data.rs  systems.rs
src/ecs/components/: ai_action.rs  ai_goal.rs  ai_perception.rs  ai_personality.rs  attack.rs  butcherable.rs  collider.rs  collision.rs  death.rs  (+25 more)
src/generation/: builders.rs
(+64 files in other folders)
