[package]
name = "diggdrasil"
version = "0.1.0"
authors = ["CodeBunny <slayer111315@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6.0"
glam = { version = "0.18.0", features = ["mint"] }
ndarray = "0.15.3"
rand = "0.8.4"
bunnyfont = { git = "https://github.com/CodeConiglietto/bunnyfont.git", branch = "master", features = ["ggez"] }
specs = { version = "0.17.0", features = ["shred-derive", "specs-derive"] }
tui = "0.16.0"
