[package]
name = "diggdrasil"
version = "0.1.0"
authors = ["CodeBunny <slayer111315@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
bunnyfont = { git = "https://github.com/CodeConiglietto/bunnyfont.git", branch = "master", features = ["ggez-integration"] }
chrono = "0.4.19"
fern = "0.6.0"
ggez = "0.6.0"
glam = { version = "0.15.0", features = ["mint"] }
itertools = "0.10.1"
lazy_static = "1.4.0"
log = "0.4.14"
ndarray = "0.15.3"
rand = "0.8.4"
specs = { version = "0.17.0", features = ["shred-derive", "specs-derive"] }
strum = { version = "0.21.0", features = ["derive"] }
tui = { version = "0.16.0", default-features = false }
